WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
246729
SuspendedPageProxy should keep Ref<WebFrameProxy> instead of just the FrameIdentifier
https://bugs.webkit.org/show_bug.cgi?id=246729
Summary
SuspendedPageProxy should keep Ref<WebFrameProxy> instead of just the FrameId...
Alex Christensen
Reported
2022-10-18 19:17:39 PDT
Removes the one case where we had multiple frames with the same ID, also fixes
rdar://101309133
Attachments
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2022-10-18 19:18:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5526
EWS
Comment 2
2022-10-19 00:43:27 PDT
Committed
255719@main
(636ad3860681): <
https://commits.webkit.org/255719@main
> Reviewed commits have been landed. Closing PR #5526 and removing active labels.
WebKit Commit Bot
Comment 3
2022-10-19 11:32:28 PDT
Re-opened since this is blocked by
bug 246757
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug