Cherry-pick 636ad3860681. rdar://problem/101309133

SuspendedPageProxy should keep Ref<WebFrameProxy> instead of just the FrameIdentifier
    https://bugs.webkit.org/show_bug.cgi?id=246729
    rdar://101309133

    Reviewed by Chris Dumez.

    * Source/WebKit/UIProcess/ProvisionalPageProxy.cpp:
    (WebKit::ProvisionalPageProxy::ProvisionalPageProxy):
    * Source/WebKit/UIProcess/SuspendedPageProxy.cpp:
    (WebKit::SuspendedPageProxy::SuspendedPageProxy):
    * Source/WebKit/UIProcess/SuspendedPageProxy.h:
    * Source/WebKit/UIProcess/WebFrameProxy.cpp:
    (WebKit::WebFrameProxy::WebFrameProxy):
    (WebKit::WebFrameProxy::~WebFrameProxy):
    * Source/WebKit/UIProcess/WebPageProxy.cpp:
    (WebKit::WebPageProxy::suspendCurrentPageIfPossible):
    (WebKit::WebPageProxy::commitProvisionalPage):
    * Source/WebKit/UIProcess/WebPageProxy.h:

    Canonical link: https://commits.webkit.org/255719@main

Canonical link: https://commits.webkit.org/255511.3@safari-7615.1.10-branch